--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "click==8.2.1",
     "distro==1.9.0",
     "flask==3.1.1",
+    "flask-cors==6.0",
     "h11==0.16.0",
     "httpcore==1.0.9",
     "httpx==0.28.1",
